<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="ONE">1</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="initial_price">$5.00</string>
    <string name="initial_tax">$0.35 tax</string>
    <string name="total">Total</string>
    <string name="total_with_tax">$5.35</string>
    <string name="tax_message">Local tax is 7% on all orders</string>
    <string name="button_instructions">Please click order to confirm selection</string>
    <string name="order">Order</string>
    <string name="max_order">Max number of coffees is 99.</string>
    <string name="min_order">Minimum order is 1 drink.</string>
    <string name="thank_you">Thank you!</string>
    <string name="whipped_cream_added">Whipped Cream Added"</string>
    <string name="chocolate_added">Chocolate Added"</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Mark">%s</xliff:g> </string>
    <string name="email_address">devcodetestemail@gmail.com</string>
</resources>

