<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="495dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <EditText
                android:id="@+id/name_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords"
                android:hint="@string/name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                style="@style/HeadingText"
                android:text="@string/toppings"
                android:textAllCaps="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <CheckBox
                    android:id="@+id/whipped_cream_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="16dp"
                    android:paddingLeft="8dp"
                    android:onClick="updateOnCheck"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whipped_cream"
                    android:textAllCaps="true"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <CheckBox
                    android:id="@+id/chocolate_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="16dp"
                    android:paddingLeft="8dp"
                    android:onClick="updateOnCheck"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chocolate"
                    android:textAllCaps="true"
                    android:textSize="16sp" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                style="@style/HeadingText"
                android:text="@string/quantity"
                android:textAllCaps="true" />

            <!-- This is the quantity picker and buttons-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp">

                <Button
                    android:id="@+id/decrement_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decrement"
                    android:padding="16dp"
                    android:text="@string/minus" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="16dp"
                    android:text="@string/ONE"
                    android:textAlignment="center"
                    style="@style/StandardText"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/increment_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    android:padding="16dp"
                    android:text="@string/plus" />
            </LinearLayout>


            <!--  This is  the total and tax calculation box -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/header_price_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="16dp"
                    android:text="@string/price"
                    style="@style/HeadingText"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="16dp"
                    android:paddingTop="4dp"
                    android:text="@string/initial_price"
                    style="@style/StandardText" />

                <TextView
                    android:id="@+id/tax_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="16dp"
                    android:paddingTop="4dp"
                    android:text="@string/initial_tax"
                    style="@style/StandardText" />

                <LinearLayout
                    android:layout_width="92dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/black"/>


                <TextView
                    android:id="@+id/header_total_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:text="@string/total"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/total_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="16dp"
                    android:paddingTop="4dp"
                    android:text="@string/total_with_tax"
                    android:textAllCaps="true"
                    style="@style/StandardText"/>

                <TextView
                    android:id="@+id/tax_message_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/tax_message"
                    android:textAlignment="center"
                    style="@style/StandardText" />

            </LinearLayout>

            <!-- This is the final order and total-->
            <TextView
                android:id="@+id/price_message_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/button_instructions"
                android:textAlignment="center"
                style="@style/StandardText"/>

            <Button
                android:id="@+id/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:onClick="submitOrder"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/order"
                android:textAllCaps="true" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
